# tribe-bci

./: .gitignore  Procfile  README.md  pyproject.toml  render.yaml  requirements.txt  start.py
reverse_bci/: __init__.py  bci_pipeline.py  benchmark_clinical.py  calibration.py  domain_adapter.py  eeg_encoder.py  eeg_processor.py  record_baseline.py  reverse_decoder.py  run_demo.py  text_decoder.py  train_clinical.py  train_full.py
reverse_bci/experiments/: run_all.py
reverse_bci/headsets/: __init__.py  base.py  emotiv.py  muse.py  simulated.py
reverse_bci/training/: __init__.py  dataset.py  inner_speech_dataset.py  train_adapter.py  train_decoder.py
reverse_bci/ui/: __init__.py  app.py  p300_speller.py  predictive_speller.py  web.py
reverse_bci/ui/templates/: index.html
